<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="#ff00ff"
        android:text="@string/three_hobby" />

    <CheckBox
        android:id="@+id/three_checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_checkBox1" />

    <CheckBox
        android:id="@+id/three_checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_checkBox2" />

    <CheckBox
        android:id="@+id/three_checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_checkBox3" />

    <CheckBox
        android:id="@+id/three_checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_checkBox4" />

    <CheckBox
        android:id="@+id/three_checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_checkBox5" />

    <TextView
        android:id="@+id/three_checktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/three_choice" />

</LinearLayout>