<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/four_b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four_b1" />

    <Button
        android:id="@+id/four_b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four_b2" />

    <Button
        android:id="@+id/four_b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four_b3" />

    <Button
        android:id="@+id/four_b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four_b4" />

    <Button
        android:id="@+id/four_b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four_b5" />

</LinearLayout>