<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/one_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/one_alignLT" />

    <TextView
        android:id="@+id/one_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/one_alignRT" />

    <TextView
        android:id="@+id/one_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/one_alignLB" />

    <TextView
        android:id="@+id/one_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/one_alignRB" />

    <TextView
        android:id="@+id/one_textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/one_centerHV" />

    <TextView
        android:id="@+id/one_textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/one_vpr" />

    <TextView
        android:id="@+id/one_textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:text="@string/one_hpb" />

    <TextView
        android:id="@+id/one_textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/one_textView1"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/one_textView1"
        android:text="@string/one_below1" />

    <TextView
        android:id="@+id/one_textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/one_textView8"
        android:layout_marginTop="40dp"
        android:layout_toLeftOf="@id/one_textView6"
        android:text="@string/one_below2" />

    <TextView
        android:id="@+id/one_textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/one_textView5"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/one_below3" />

</RelativeLayout>