<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/eleven_sid_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="5dp"
            android:text="@string/eleven_sid_string"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eleven_name_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="5dp"
            android:text="@string/eleven_name_string"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eleven_age_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="5dp"
            android:text="@string/eleven_age_string"
            android:textSize="20sp" />

        <Button
            android:id="@+id/eleven_insertdy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:text="@string/eleven_insert"
            android:textSize="14sp" />

        <Button
            android:id="@+id/eleven_selectdy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:text="@string/eleven_select"
            android:textSize="14sp" />

        <Button
            android:id="@+id/eleven_createdy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:text="@string/eleven_create"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp"
        android:textSize="20sp" >

        <EditText
            android:id="@+id/eleven_sid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eleven_sid"
            android:padding="5dp"
            android:textSize="20sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/eleven_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eleven_name"
            android:padding="5dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eleven_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eleven_age"
            android:padding="5dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/eleven_updatedy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/eleven_update"
            android:textSize="14sp" />

        <Button
            android:id="@+id/eleven_deletedy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/eleven_delete"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>