<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/eleven_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/eleven_create"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eleven_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/eleven_insert"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eleven_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/eleven_update"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eleven_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/eleven_select"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eleven_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/eleven_delete"
        android:textSize="20sp" />

</LinearLayout>